--- a/README.org
+++ b/README.org
@@ -232,7 +232,7 @@ You can replace a target object with a proxy.
 
 A greate case study would be reactivity system in Vue JS.
 
-You create data, but the framework itself needs a wai of intercept
+You create data, but the framework itself needs a way of intercept
 that data and update the UI whenever the data changes.
 
 The way Vue does is substituting the original object with a proxy.
